Squashed commit of the following:
commit da2c1f3d158d9bba9829546262174977c17f4b48
Author: Soumyaranjan-25 <soumyaranjanmahapatra25@gmail.com>
Date:   Sat Sep 5 18:51:23 2026 +0530

    Updated

commit 2f0a41285cd6bc0ea1899b1c9f6dc185033cf72f
Author: Soumyaranjan-25 <soumyaranjanmahapatra25@gmail.com>
Date:   Fri Sep 4 23:04:59 2026 +0530

    Dashbaord updated

commit 84d7fd10c2951adedaf701d02f4f0cfa9a51be34
Author: Soumyaranjan-25 <soumyaranjanmahapatra25@gmail.com>
Date:   Fri Sep 4 00:40:19 2026 +0530

    Updated